# graven

./: .dockerignore  .gitignore  .pylintrc  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  compose.yaml  license_justification.md  readme.md  requirements.txt
.github/workflows/: lint.yaml  pylint.yml  release.yaml  security.yaml
ddl/: 0_run_log.sql  1_cve.sql  2_cwe.sql  3_jar.sql  artifact.sql  cve__cwe.sql  domain.sql  error_log.sql  event_log.sql  jar__cve.sql  sbom.sql  sbom__artifact.sql
graven/: requirements.txt
graven/db/: graven_database.py
graven/graven/: __main__.py
graven/graven/anchore/: grype.py  syft.py
graven/graven/db/: database.py  graven_database.py
graven/graven/qmodel/: file.py  message.py
graven/graven/shared/: __init__.py  cache_manager.py  cli_parser.py  logger.py  parser.py  timer.py  utils.py
graven/graven/worker/: __init__.py  analyzer.py  analzyer.py  crawler.py  downloader.py  generator.py  nvd_mitre.py  pipeline_builder.py  scanner.py  vuln_fetcher.py  worker.py  worker_factory.py
graven/shared/: __init__.py  cache_manager.py  timer.py
graven/worker/: analyzer.py  downloader.py  generator.py  scanner.py  vuln_fetcher.py
py-crawler/: Dockerfile  readme.md  requirements.txt
py-crawler/graven/: __main__.py
py-crawler/graven/analyze/: analyzer.py
py-crawler/graven/crawl/: crawler.py
py-crawler/graven/db/: cve_breadcrumbs_database.py  database.py  (+1 more)
src/common/: pyproject.toml  readme.md
src/common/common/: database.py  logger.py
src/graven/: Dockerfile  readme.md  requirements.txt
(+34 files in other folders)
