[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.1.0"
description = "Collection of shared modules used throughout the breadcrumbs project"
authors = [{ name = "Derek Garcia", email = "dgarcia2@hawaii.edu" }]
dependencies = [
    "python-dotenv==1.0.1",
    "mysql-connector-python==9.2.0",
    "tqdm==4.67.1"
]